--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
 				<enabled>true</enabled>
 			</snapshots>
 		</repository>
+
 				
 		
 	</repositories>
@@ -101,6 +102,13 @@
 			<artifactId>vaadin-grid-util</artifactId>
 			<version>1.0.8</version>
 		</dependency>
+
+		<dependency>
+			<groupId>de.steinwedel.vaadin.addon</groupId>
+			<artifactId>messagebox</artifactId>
+			<version>3.0.17</version>
+		</dependency>
+
 		<!--  
 		<dependency>
 			<groupId>org.hibernate</groupId>
