--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,17 @@
             <version>3.1</version>
         </dependency>
 
+		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>2.2.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.informix.jdbc</groupId>
+			<artifactId>com.springsource.com.informix.jdbc</artifactId>
+			<version>3.0.0.JC3</version>
+		</dependency>
 
 		<!--  
 		<dependency>
