--- a/pom.xml
+++ b/pom.xml
@@ -142,11 +142,17 @@
 			<version>2.2.2</version>
 		</dependency>
 
-		<dependency>
-			<groupId>com.informix.jdbc</groupId>
-			<artifactId>com.springsource.com.informix.jdbc</artifactId>
-			<version>3.0.0.JC3</version>
-		</dependency>
+		  <dependency>
+            <groupId>commons-net</groupId>
+            <artifactId>commons-net</artifactId>
+            <version>3.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.googlecode.jsmpp</groupId>
+            <artifactId>jsmpp</artifactId>
+            <version>2.1.0</version>
+        </dependency>
 
 		<!--  
 		<dependency>
