--- a/pom.xml
+++ b/pom.xml
@@ -147,12 +147,12 @@
             <artifactId>commons-net</artifactId>
             <version>3.1</version>
         </dependency>
-
+		<!--
         <dependency>
             <groupId>com.googlecode.jsmpp</groupId>
             <artifactId>jsmpp</artifactId>
             <version>2.1.0</version>
-        </dependency>
+        </dependency> -->
 
 		<!--  
 		<dependency>
@@ -279,6 +279,7 @@
 				<version>${jetty.plugin.version}</version>
 				<configuration>
 				    <scanIntervalSeconds>2</scanIntervalSeconds>
+
 				</configuration>
 			</plugin>
 		</plugins>
