--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,13 @@
             <artifactId>commons-net</artifactId>
             <version>3.1</version>
         </dependency>
+               
+		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>2.1.5</version>
+		</dependency>
+
 		<!--
         <dependency>
             <groupId>com.googlecode.jsmpp</groupId>
